--- a/app/src/main/res/layout/dialog_add_purchase.xml
+++ b/app/src/main/res/layout/dialog_add_purchase.xml
@@ -7,23 +7,25 @@
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <android.support.design.widget.TextInputEditText
+        <AutoCompleteTextView
             android:id="@+id/etCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Category"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:completionThreshold="1"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <android.support.design.widget.TextInputEditText
+        <AutoCompleteTextView
             android:id="@+id/etSubcategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Subcategory"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:completionThreshold="1"/>
     </android.support.design.widget.TextInputLayout>
 
 
