--- a/app/src/main/res/layout/activity_add_purchase.xml
+++ b/app/src/main/res/layout/activity_add_purchase.xml
@@ -19,10 +19,10 @@
             android:id="@+id/etCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:completionHint="Komplettiere"
             android:completionThreshold="1"
             android:hint="Category"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:imeActionId="@+id/etSubcategory"/>
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout5"
@@ -33,12 +33,13 @@
         app:layout_constraintRight_toRightOf="@+id/textInputLayout6"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">
         <AutoCompleteTextView
-            android:id="@+id/etSubcategory"
+            android:id="@id/etSubcategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:completionThreshold="1"
             android:hint="Subcategory"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:imeActionId="@+id/etPrice"/>
     </android.support.design.widget.TextInputLayout>
 
     <LinearLayout
@@ -59,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1">
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/etPrice"
+                android:id="@id/etPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
