--- a/app/src/main/res/menu/add_purchase.xml
+++ b/app/src/main/res/menu/add_purchase.xml
@@ -3,8 +3,8 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_add"
-        android:title="Add"
+        android:id="@+id/menu_save"
+        android:title="Save"
         app:showAsAction="always"/>
 
 </menu>
