Store date of a purchase  as time in milliseconds
Before it was stored as Date-Object, which resulted in many unnecessary attributes when storing it

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,6 +9,6 @@
     android:clipToPadding="false"
     android:paddingBottom="64dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="jungen.com.cashtracker.model.MainActivity"
+    tools:context=".activity.MainActivity"
     tools:showIn="@layout/activity_main">
 </ListView>
