--- a/app/src/main/res/layout/activity_add_purchase.xml
+++ b/app/src/main/res/layout/activity_add_purchase.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/activity_horizontal_margin"
-    tools:context="jungen.com.cashtracker.model.AddPurchaseActivity">
+    tools:context=".activity.AddPurchaseActivity">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout6"
@@ -71,7 +71,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <Button
-            android:id="@+id/btnDate"
+            android:id="@+id/btnTime"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
