--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_padding"
-    tools:context="jungen.com.cashtracker.model.SignInActivity">
+    tools:context=".activity.SignInActivity">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
