--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jungen.com.cashtracker.model.SignInActivity">
+    tools:context=".activity.SignInActivity">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
