--- a/app/src/main/res/layout/list_row_purchase.xml
+++ b/app/src/main/res/layout/list_row_purchase.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<jungen.com.cashtracker.model.CheckableFrameLayout
+<jungen.com.cashtracker.CheckableFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -40,7 +40,7 @@
             app:layout_constraintVertical_bias="0.0"/>
 
         <TextView
-            android:id="@+id/btnDate"
+            android:id="@+id/btnTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="0dp"
@@ -59,7 +59,7 @@
             android:hint="Price"
             android:textAppearance="@android:style/TextAppearance.Material.Body2"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="@+id/btnDate"/>
+            app:layout_constraintRight_toRightOf="@+id/btnTime"/>
 
     </android.support.constraint.ConstraintLayout>
-</jungen.com.cashtracker.model.CheckableFrameLayout>
+</jungen.com.cashtracker.CheckableFrameLayout>
