--- a/app/src/main/res/layout/activity_add_purchase.xml
+++ b/app/src/main/res/layout/activity_add_purchase.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/activity_horizontal_margin"
-    tools:context=".activity.AddPurchaseActivity">
+    tools:context=".view.activity.AddPurchaseActivity">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout6"
