--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.SignInActivity">
+    tools:context=".view.activity.SignInActivity">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
@@ -20,7 +20,9 @@
         <android.support.design.widget.TextInputEditText
             android:id="@+id/etEmail"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:hint="@string/prompt_email"/>
+            android:layout_height="match_parent"
+            android:hint="@string/prompt_email"
+            android:inputType="textEmailAddress"/>
 
     </android.support.design.widget.TextInputLayout>
 
