--- a/app/src/main/res/layout/fragment_purchase_list.xml
+++ b/app/src/main/res/layout/fragment_purchase_list.xml
@@ -8,6 +8,5 @@
     android:clipToPadding="false"
     android:paddingBottom="64dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".view.activity.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context=".view.activity.MainActivity">
 </ListView>
