Added running total and interval picker
Interval picker does not save its state yet

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,11 @@
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <!-- PurchaseList fragment is loaded dynamically, because user must be authenticated first -->
+    <FrameLayout
+        android:id="@+id/fragmentPurchaseInfoContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <FrameLayout
         android:id="@+id/fragmentPurchaseListContainer"
         android:layout_width="match_parent"
